// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField should be able to be snapshottable 1`] = `
<div
  className="md-text-field-container md-full-width md-text-field-container--input"
  onClick={[Function]}
  onDoubleClick={undefined}
  onMouseDown={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  onTouchCancel={undefined}
  onTouchEnd={undefined}
  onTouchMove={undefined}
  onTouchStart={undefined}
  style={
    Object {
      "width": null,
    }
  }
>
  <input
    className="md-text-field md-text md-full-width md-text-field--margin"
    disabled={undefined}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder={undefined}
    rows={undefined}
    style={undefined}
    type="text"
  />
  <hr
    className="md-divider md-divider--text-field md-divider--expand-from-left"
  />
</div>
`;

exports[`TextField should be able to be snapshottable 2`] = `
<div
  className="md-text-field-container md-full-width md-text-field-container--input"
  onClick={[Function]}
  onDoubleClick={undefined}
  onMouseDown={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  onTouchCancel={undefined}
  onTouchEnd={undefined}
  onTouchMove={undefined}
  onTouchStart={undefined}
  style={
    Object {
      "width": null,
    }
  }
>
  <label
    className="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized"
    htmlFor="test"
  >
    Label
  </label>
  <input
    className="md-text-field md-text md-full-width md-text-field--floating-margin"
    disabled={undefined}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder={null}
    rows={undefined}
    style={undefined}
    type="text"
  />
  <hr
    className="md-divider md-divider--text-field md-divider--expand-from-left"
  />
</div>
`;

exports[`TextField should be able to be snapshottable 3`] = `
<div
  className="md-text-field-container md-full-width md-text-field-container--multiline"
  onClick={[Function]}
  onDoubleClick={undefined}
  onMouseDown={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  onTouchCancel={undefined}
  onTouchEnd={undefined}
  onTouchMove={undefined}
  onTouchStart={undefined}
  style={
    Object {
      "width": null,
    }
  }
>
  <label
    className="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized"
    htmlFor="test"
  >
    Label
  </label>
  <div
    className="md-text-field-multiline-container md-text-field--floating-margin"
    style={
      Object {
        "height": null,
      }
    }
  >
    <span
      aria-hidden={true}
    />
    <textarea
      aria-hidden={true}
      className="md-text-field md-text md-text-field--multiline md-full-width md-text-field--multiline-mask"
      defaultValue={undefined}
      readOnly={true}
      rows={2}
      style={undefined}
      tabIndex={-1}
      value={undefined}
    />
    <textarea
      className="md-text-field md-text md-text-field--multiline md-full-width"
      defaultValue={undefined}
      disabled={undefined}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder={null}
      rows={2}
      style={
        Object {
          "height": null,
        }
      }
      value={undefined}
    />
  </div>
  <hr
    className="md-divider md-divider--text-field md-divider--expand-from-left"
  />
</div>
`;

exports[`TextField should be able to be snapshottable 4`] = `
<div
  className="md-text-field-container md-full-width md-text-field-container--input md-text-field-container--input-block md-text-field-container--padded-block"
  onClick={[Function]}
  onDoubleClick={undefined}
  onMouseDown={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  onTouchCancel={undefined}
  onTouchEnd={undefined}
  onTouchMove={undefined}
  onTouchStart={undefined}
  style={
    Object {
      "width": null,
    }
  }
>
  <input
    className="md-text-field md-text md-full-width"
    disabled={undefined}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Block"
    rows={undefined}
    style={undefined}
    type="text"
  />
</div>
`;

exports[`TextField should be able to be snapshottable 5`] = `
<div
  className="md-text-field-container md-full-width md-text-field-container--multiline md-text-field-container--multiline-block md-text-field-container--padded-block"
  onClick={[Function]}
  onDoubleClick={undefined}
  onMouseDown={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  onTouchCancel={undefined}
  onTouchEnd={undefined}
  onTouchMove={undefined}
  onTouchStart={undefined}
  style={
    Object {
      "width": null,
    }
  }
>
  <div
    className="md-text-field-multiline-container"
    style={
      Object {
        "height": null,
      }
    }
  >
    <span
      aria-hidden={true}
    />
    <textarea
      aria-hidden={true}
      className="md-text-field md-text md-text-field--multiline md-full-width md-text-field--multiline-mask"
      defaultValue={undefined}
      readOnly={true}
      rows={2}
      style={undefined}
      tabIndex={-1}
      value={undefined}
    />
    <textarea
      className="md-text-field md-text md-text-field--multiline md-full-width"
      defaultValue={undefined}
      disabled={undefined}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Block"
      rows={2}
      style={
        Object {
          "height": null,
        }
      }
      value={undefined}
    />
  </div>
</div>
`;

exports[`TextField should be able to be snapshottable 6`] = `
<div
  className="md-text-field-container md-full-width md-text-field-container--input"
  onClick={[Function]}
  onDoubleClick={undefined}
  onMouseDown={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  onTouchCancel={undefined}
  onTouchEnd={undefined}
  onTouchMove={undefined}
  onTouchStart={undefined}
  style={
    Object {
      "width": 100,
    }
  }
>
  <label
    className="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized"
    htmlFor="test"
  >
    Label
  </label>
  <input
    className="md-text-field md-text md-full-width md-text-field--floating-margin"
    disabled={undefined}
    id="test"
    name="testing"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder={null}
    rows={undefined}
    style={undefined}
    type="text"
  />
  <hr
    className="md-divider md-divider--text-field md-divider--expand-from-left"
  />
</div>
`;

exports[`TextField should be able to be snapshottable 7`] = `
<div
  className="md-text-field-container md-full-width md-text-field-container--input"
  onClick={[Function]}
  onDoubleClick={undefined}
  onMouseDown={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  onTouchCancel={undefined}
  onTouchEnd={undefined}
  onTouchMove={undefined}
  onTouchStart={undefined}
  style={
    Object {
      "width": null,
    }
  }
>
  <label
    className="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized"
    htmlFor="test"
  >
    Label
  </label>
  <input
    className="md-text-field md-text md-full-width md-text-field--floating-margin"
    disabled={undefined}
    id="test"
    name="testing"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder={null}
    rows={undefined}
    style={undefined}
    type="text"
  />
  <hr
    className="md-divider md-divider--text-field md-divider--expand-from-left"
  />
  <div
    className="md-text-field-message-container md-full-width"
  >
    <p
      aria-hidden={false}
      className="md-text-field-message md-text-field-message--active"
    >
      Look at me!
    </p>
  </div>
</div>
`;

exports[`TextField should be able to be snapshottable 8`] = `
<div
  className="md-text-field-container md-full-width md-text-field-container--input"
  onClick={[Function]}
  onDoubleClick={undefined}
  onMouseDown={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  onTouchCancel={undefined}
  onTouchEnd={undefined}
  onTouchMove={undefined}
  onTouchStart={undefined}
  style={
    Object {
      "width": null,
    }
  }
>
  <label
    className="md-floating-label md-floating-label--error md-floating-label--inactive md-floating-label--inactive-sized"
    htmlFor="test"
  >
    Label
  </label>
  <input
    className="md-text-field md-text md-full-width md-text-field--floating-margin"
    disabled={undefined}
    id="test"
    name="testing"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder={null}
    rows={undefined}
    style={undefined}
    type="text"
  />
  <hr
    className="md-divider md-divider--text-field md-divider--expand-from-left md-divider--text-field-error"
  />
  <div
    className="md-text-field-message-container md-text-field-message-container--error md-full-width"
  >
    <p
      aria-hidden={false}
      className="md-text-field-message md-text-field-message--active"
    >
      Some error
    </p>
  </div>
</div>
`;

exports[`TextField should be able to be snapshottable 9`] = `
<div
  className="md-text-field-container md-full-width md-text-field-container--input"
  onClick={[Function]}
  onDoubleClick={undefined}
  onMouseDown={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  onTouchCancel={undefined}
  onTouchEnd={undefined}
  onTouchMove={undefined}
  onTouchStart={undefined}
  style={
    Object {
      "width": null,
    }
  }
>
  <label
    className="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized"
    htmlFor="test"
  >
    Label
  </label>
  <input
    className="md-text-field md-text md-full-width md-text-field--floating-margin"
    disabled={undefined}
    id="test"
    name="testing"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder={null}
    rows={undefined}
    style={undefined}
    type="text"
  />
  <hr
    className="md-divider md-divider--text-field md-divider--expand-from-left"
  />
  <div
    className="md-text-field-message-container md-text-field-message-container--count-only md-full-width"
  >
    <p
      aria-hidden={true}
      className="md-text-field-message md-text-field-message--inactive"
    >
      Look at me!
    </p>
  </div>
</div>
`;

exports[`TextField should be able to be snapshottable 10`] = `
<div
  className="md-text-field-container md-full-width md-text-field-container--input"
  onClick={[Function]}
  onDoubleClick={undefined}
  onMouseDown={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  onTouchCancel={undefined}
  onTouchEnd={undefined}
  onTouchMove={undefined}
  onTouchStart={undefined}
  style={
    Object {
      "width": null,
    }
  }
>
  <label
    className="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized"
    htmlFor="test"
  >
    Label
  </label>
  <input
    className="md-text-field md-text md-full-width md-text-field--floating-margin"
    disabled={undefined}
    id="test"
    name="testing"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder={null}
    rows={undefined}
    style={undefined}
    type="text"
  />
  <hr
    className="md-divider md-divider--text-field md-divider--expand-from-left"
  />
  <div
    className="md-text-field-message-container md-text-field-message-container--count-only md-full-width"
  >
    <p
      aria-hidden={true}
      className="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
    >
      0 / 20
    </p>
  </div>
</div>
`;
